# near_charge2earn_demo

./: README.md  build.gradle  settings.gradle
app/: build.gradle
app/release/: output-metadata.json
app/src/main/: AndroidManifest.xml
app/src/main/assets/animations/: data.json
app/src/main/java/com/near/android/charg2earn/: AppApplication.kt
app/src/main/res/drawable/: drop_bg.xml  ic_delete.xml  ic_device_co2.xml  ic_device_details_current.xml  ic_device_details_healthy.xml  ic_device_details_history.xml  ic_device_details_temperature.xml  ic_device_details_time.xml  ic_device_details_voltage.xml  ic_device_linked.xml  ic_device_menu.xml  ic_device_qution.xml  ic_device_unlink.xml  ic_nav_devices.xml  ic_nav_devices_full.xml  ic_nav_home.xml  ic_nav_home_full.xml  ic_nav_more.xml  ic_nav_more_full.xml  ic_recycle_batter.xml  ic_recycling_successfu.xml  icon_delet.xml  icon_left_arrow.xml  icon_right_arrow.xml  logo.xml  selector_nav_devices.xml  selector_nav_home.xml  selector_nav_more.xml  shape_nav_back.xml
app/src/main/res/layout/: activity_main.xml  activity_splash.xml
app/src/main/res/menu/: bottom_nav_menu.xml
app/src/main/res/mipmap-anydpi-v26/: ic_launcher_round.xml
app/src/main/res/values/: colors.xml  ic_launcher_background.xml  strings.xml  themes.xml
gradle/wrapper/: gradle-wrapper.properties
knear-sdk/: build.gradle
knear-sdk/src/main/java/com/knear/android/: NearService.kt
smart_contract/: .gitignore  Cargo.toml  data.json
smart_contract/src/: ebatte-verify.json  lib.rs
(+68 files in other folders)
