[package]
name = "ebatte_testnet_demo"
version = "0.2.0"
authors = ["Grace <grace.wang@ebatte.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = { git = "https://github.com/near/near-sdk-rs", tag = "4.0.0-pre.7"}
near-contract-standards = { git = "https://github.com/near/near-sdk-rs", tag = "4.0.0-pre.7" }
serde_json = "1.0"
near-units = "0.2.0"
hex = "^0.4"
ed25519-dalek = { version = "1", features = ["serde"] }
[profile.release]
codegen-units=1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true
